# pancitawiiw

./: .gitignore  index.html  instalar.ps1  package.json  pnpm-lock.yaml  vite.config.js
public/: robots.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: funciones.rs  lib.rs  main.rs  nucleo.rs  puente_central.rs  rii.rs
src-tauri/src/funciones/: ajustes.rs  chatwii.rs  lab.rs  mod.rs
src-tauri/src/funciones/ajustes/: actualizador.rs  ajustes.rs  cuenta.rs  energia.rs  mod.rs  permisos.rs
src-tauri/src/funciones/chatwii/: chat.rs  mod.rs
src-tauri/src/funciones/duplicados/: acciones_papelera.rs  escaner_3etapas.rs  mod.rs  preview_media.rs
src-tauri/src/funciones/lab/: lab.rs  mod.rs
src-tauri/src/funciones/musica/: escaner_yt.rs  local_lista.rs  mod.rs  musica.rs  musica_lista.rs  youtube_lista.rs
src-tauri/src/funciones/optimizar/: analisis_general.rs  analisis_profundo.rs  escaner_basura.rs  limpiador.rs  mod.rs  modelos.rs  papelera.rs  papelera_nativa.rs  ram_turbo.rs
src-tauri/src/nucleo/: chatwii.rs  mod.rs  ridev.rs  sistema.rs
src-tauri/src/nucleo/chatwii/: gemini.rs  mod.rs  prompt.rs  respuesta_chat.rs
src-tauri/src/nucleo/ridev/: archivos.rs  base_datos.rs  carpetas.rs  conectar_ri.rs  consola.rs  documento.rs  mod.rs  notificaciones.rs  registro_logs.rs  sistema.rs
src-tauri/src/nucleo/sistema/: abrir_app.rs  cerrar_app.rs  limpieza.rs  mod.rs  telemetria.rs  ventana.rs
src-tauri/src/nucleo/ventana/: mod.rs  panel.rs  sonrisa.rs  ventanas.rs
(+196 files in other folders)
