[package]
name = "pancitawii"
version = "2.3.0"
description = "pancitawii - Horario, Reloj Digital y Asistente"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pancitawii_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pancitawii"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
window-vibrancy = "0.5.2"
windows-sys = { version = "0.59", features = ["Win32_System_Power", "Win32_Foundation"] }
once_cell = "1.19"
sysinfo = "0.30"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
rfd = "0.14"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

